# job-scraping-app

./: Dockerfile  Makefile  README.md  ai_assistant.py  brute_probe.py  brute_results.txt  check_ashby_status.py  check_ats.py  cv_bridge.py  dashboard.py  docker-compose.yml  fetchers.py  inspect_ashby.py  inspect_retool.py  main.py  mark_applied.py  probe_helper.py  processor.py  pyproject.toml  reporter.py  requirements-scraper.txt  requirements.txt  scheduler.py  test_expansion_samples.py  test_expansion_samples_v2.py  test_results.txt  test_scoring_precision.py  test_strategy_config.py  verification_log.txt  verification_log_final.txt  verify_async.py  verify_env.py  verify_filtering.py  verify_locations.py  verify_phase2.py
config/: companies.yaml  filtering.yaml  keywords.yaml
data/: ai_insights.json  applied_jobs.json  cv.txt  tmp5z4bup8f  tracking.json
pages/: CV_Editor.py
report/: 2026-02-04.md  2026-02-06.md  2026-02-07.md  2026-02-08.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  2026-02-17.md  2026-02-19.md  2026-02-21.md
scripts/: clean_data.py
tests/: test_fetchers.py  test_processor.py  test_scheduler_logic.py  test_schema.py
utils/: location_filter.py  network.py  schemas.py  smart_filter.py
